# N-body

./: .gitignore  CMakeLists.txt  INSTALL.md  INSTALLME.md  README.md  comments.md
asset/: lf_vs_fe.txt  openmp.txt  serial.txt  timing_CUDA
asset/LeapFrog_vs_ForwardEuler/: out_fe.txt  out_lf.txt
include/: define.h
src/cuda/: main.cpp  main.cu  makefile
src/cuda/futils/: futils.cpp  futils.h
src/cuda/include/: defines.h  integration_type.h
src/cuda/kernels/: System.cpp  System.cu  System.h  kernels.cu  kernels.h
src/cuda/system/: System.cu  System.h  SystemFE.cu  SystemFE.h  SystemLF.cu  SystemLF.h  system_friend.cpp  system_friend.h
src/opengl/: Render.cpp  Render.h  Rendering.h  main_view.cpp
src/openmp/: Solver.cpp  Vector.cpp  Vector.h  Vector.hpp  main.cpp  makefile
src/openmp/Solver/: ForwardEulerSolver.cpp  ForwardEulerSolver.h  LeapFrogSolver.cpp  LeapFrogSolver.h  Solver.cpp  Solver.h
test/openmp/: SolverTest.cpp
